<resources>
    <string name="app_name">Fitness</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Criar Conta</string>
    <string name="email">Email</string>
    <string name="insertName">Nome</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirma a Password</string>
    <string name="or">OU</string>
    <string name="sign_in">Entrar</string>
    <string name="you_are_signed_in">Bem vindo</string>
    <string name="sign_out">Sair</string>
    <string name="manual">Manual</string>
    <string name="user_id">userId</string>
    <string name="email_id">emailId</string>
    <string name="resetPassword">Esqueci-me da password</string>
    <string name="recuperarPassword">Recuperar Password"</string>
    <string name="criarConta">Criar Conta</string>
    <string name="login">Login</string>

    <string-array name="filterRanking">
        <item>Distancia Percorrida</item>
        <item>Calorias Queimadas</item>
    </string-array>

    <string-array name="radious">
        <item>"1"</item>
        <item>"5"</item>
        <item>"10"</item>
        <item>"15"</item>
        <item>"20"</item>
        <item>"25"</item>
        <item>"30"</item>
        <item>"35"</item>
        <item>"40"</item>
        <item>"45"</item>
        <item>"50"</item>
    </string-array>

    <string name="open">Open</string>
    <string name="close">Close</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bem vindo"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>